# easy-stage

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  reversal.txt  rnet.md  stagemarkt.db  stagemarkt.py
aggregator/: Dockerfile  config.docker.toml  config.toml  crontab  env.example
aggregator/src/: config.rs  http.rs  lib.rs  main.rs
aggregator/src/scrapers/: mod.rs  nvb.rs  stagemarkt.rs
apps/: README.md
apps/aggregator/: .env.example  Cargo.toml  Dockerfile
apps/aggregator/src/: db.rs  lib.rs  models.rs
apps/web/: .env.example  package-lock.json  package.json
apps/web/prisma/: schema.prisma
apps/web/src/: auth.ts
infra/postgres/: init.sql
scraper/: Dockerfile  SCHEMA.md  db.py  docker-compose.yml  main.py  meili_sync.py  nvb.py  requirements.txt  stagemarkt.py
web/: Dockerfile  README.md  middleware.ts  package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/about/: page.tsx
web/app/auth/: actions.ts
web/app/components/: InternshipCard.tsx  InternshipModal.tsx  SearchBox.tsx
web/app/lib/: actions.ts  meili.ts
web/app/sign-in/: page.tsx
web/app/sign-up/: page.tsx
web/app/stages/: layout.tsx  (+2 more)
web/components/: auth-button.tsx  description-section.tsx  internship-card.tsx  keywords-section.tsx  location-card.tsx  logo.tsx  map-popup.tsx  map-view.tsx  media-gallery.tsx  search-suggestions.tsx  theme-toggle.tsx
web/convex/: auth.config.ts  schema.ts  tsconfig.json  users.ts
web/lib/: meilisearch.ts
web/public/: site.webmanifest
(+20 files in other folders)
