[package]
name = "scrapers"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrapers"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = "0.7"